@@ -21,7 +21,7 @@ public class MatrixToListTest {
                 {13, 14, 15}
         };
 
-        List<Integer> expected = Arrays.asList(
+        List<Integer> expected = List.of(
                 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15
         );
         assertThat(MatrixToList.matrixToList(array), is(expected));
